@@ -1,12 +1,0 @@
-<samba:parameter name="cldap port"
-                 context="G"
-                 type="integer"
-                 xmlns:samba="http://www.samba.org/samba/DTD/samba-doc">
-<description>
-    <para>This option controls the port used by the CLDAP protocol.
-</para>
-</description>
-
-<value type="default">389</value>
-<value type="example">3389</value>
-</samba:parameter>
