@@ -943,8 +943,6 @@ void loadparm_s3_init_globals(struct loadparm_context *lp_ctx,
 
 	Globals.nsupdate_command = str_list_make_v3_const(NULL, "/usr/bin/nsupdate -g", NULL);
 
-	Globals.cldap_port = 389;
-
 	Globals.dgram_port = NBT_DGRAM_SERVICE_PORT;
 
 	Globals.nbt_port = NBT_NAME_SERVICE_PORT;
