@@ -717,10 +717,7 @@ bool torture_netlogon_udp(struct torture_context *tctx)
 			talloc_asprintf(tctx,"Failed to resolve %s: %s",
 					nbt_name.name, nt_errstr(status)));
 
-	r = tsocket_address_inet_from_strings(tctx, "ip",
-					      ip,
-					      lpcfg_cldap_port(tctx->lp_ctx),
-					      &dest_addr);
+	r = tsocket_address_inet_from_strings(tctx, "ip", ip, 389, &dest_addr);
 	CHECK_VAL(r, 0);
 
 	/* cldap_socket_init should now know about the dest. address */
